--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                           <span class="shop-item-price">FREE</span>
                                       </div>
                                       <div class="card-description">Beware! It can fly away. We make no guarantees.<br><br><ul><li>Lightweight textured fabric</li> <li>Rounded v-neckline</li> <li>Pom pom trims</li> <li>Regular fit – true to size</li></ul> <br>Duis auctor hendrerit nisi, at lacinia ex vulputate quis. Suspendisse convallis iaculis tortor, quis mattis lectus rutrum a.<br><br> Product code: <strong>367DDF5p</strong></div>   
-                                      <div class="mbr-section-btn item-button" style="text-align: center;"><a href="https://guitar-tuner.appspot.com" class="btn btn-primary btn-primary-outline" style="position: relative; display: inline-block;">OPEN NOW</a></div>
+                                      <div class="mbr-section-btn item-button" style="text-align: center;"><a onclick="window.open('https://guitar-tuner.appspot.com','guitar-tuner','directories=no,titlebar=no,toolbar=no,location=no,status=no,menubar=no');" href="#"  class="btn btn-primary btn-primary-outline" style="position: relative; display: inline-block;">OPEN NOW</a></div>
                                   </div>        
                               </div>
                           </div><div class="mbr-gallery-item mbr-gallery-item__mobirise3" data-tags="Wonderful" data-seller="false">
@@ -111,7 +111,7 @@
                                           <span class="shop-item-price">FREE</span>
                                       </div>
                                       <div class="card-description">Beware! It can fly away. We make no guarantees.<br><br><ul><li>Lightweight textured fabric</li> <li>Rounded v-neckline</li> <li>Pom pom trims</li> <li>Regular fit – true to size</li></ul> <br>Duis auctor hendrerit nisi, at lacinia ex vulputate quis. Suspendisse convallis iaculis tortor, quis mattis lectus rutrum a.<br><br> Product code: <strong>367DDF5p</strong></div>   
-                                      <div class="mbr-section-btn item-button" style="text-align: center;"><a href="https://guitar-tuner.appspot.com" class="btn btn-primary btn-primary-outline" style="position: relative; display: inline-block;">OPEN NOW</a></div>
+                                      <div class="mbr-section-btn item-button" style="text-align: center;"><a onclick="window.open('https://guitar-tuner.appspot.com','guitar-tuner','directories=no,titlebar=no,toolbar=no,location=no,status=no,menubar=no');" href="#" class="btn btn-primary btn-primary-outline" style="position: relative; display: inline-block;">OPEN NOW</a></div>
                                   </div>        
                               </div>
                           </div></div>
